# cpp-Socket

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  Nouveau TOP-Makefile  README.md  build.sh  changelog
Socket/: BalancingSelector.cpp  BalancingSelector.hpp  FuncWrapper-client.tpl  FuncWrapper-serveur.tpl  FuncWrapper.cpp  FuncWrapper.hpp  FuncWrapper.tpl  Makefile  SelectManager.cpp  SelectManager.hpp  Serializer.cpp  Serializer.hpp  Socket.cpp  Socket.hpp  SocketSerialized.cpp  SocketSerialized.hpp  client-main.cpp  client.cpp  define.hpp  serveur-main.cpp
Socket/client/: Client.cpp  Client.hpp  Client.tpl  FuncWrapper.tpl  Makefile  cli-Client.cpp  client.cpp  main-Client.cpp
Socket/server/: Client.cpp  Client.hpp  FuncWrapper.tpl  Server.cpp  Server.hpp  Srv-Server.cpp  Srv-Server.hpp  Srv-Serveur.cpp  User.cpp  User.hpp  main-Server.cpp  server.cpp
doc/: CMakeLists.txt  Doxyfile  Doxyfile.in
examples/: CMakeLists.txt  test-serializer
examples/broadcast/: CMakeLists.txt  broadcast-client.cpp  broadcast-server.cpp
examples/client/: CMakeLists.txt  client.cpp  defines.hpp  functions.cpp  functions.hpp
examples/serializer/: CMakeLists.txt  serializer.cpp
examples/server/: CMakeLists.txt  dispatch.cpp  dispatch.hpp  functions.cpp  functions.hpp  server.cpp
examples/socket_serializer/: CMakeLists.txt  socket_serializer.cpp
include/Socket/: BalancingSelector.hpp  Config.hpp  FuncWrapper.hpp  FuncWrapper.tpl  SelectManager.hpp  Serializer.hpp  Serializer.tpl  Socket.hpp  Socket.tpl  SocketSerialized.hpp  Status.hpp  define.hpp
include/Socket/client/: Client.hpp  Client.tpl
include/Socket/server/: Client.hpp  Server.hpp
src/: Makefile  SelectManager.cpp  SelectManager.hpp  Serializer.cpp  Serializer.hpp  Socket.cpp  Socket.hpp  SocketSerialized.cpp  SocketSerialized.hpp  client-main.cpp  serveur-main.cpp
src/Socket/: BalancingSelector.cpp  CMakeLists.txt  Config.cpp  FuncWrapper.cpp  Makefile  SelectManager.cpp  SelectManager.cpp.old  Serializer.cpp  Socket.cpp  SocketSerialized.cpp  Status.cpp
src/Socket/Win/: dispatch.cpp
src/Socket/client/: Client.cpp  Makefile
src/Socket/server/: Client.cpp  Makefile  Server.cpp
